--- a/configs/llama3_2_3B_cuda.yaml
+++ b/configs/llama3_2_3B_cuda.yaml
@@ -27,7 +27,7 @@ tokenizer:
 
 # Model Arguments
 model:
-  _component_: torchtune.models.llama3_2.lora_llama3_2_1b
+  _component_: torchtune.models.llama3_2.lora_llama3_2_3b
   lora_attn_modules: ['q_proj', 'v_proj', 'output_proj']
   apply_lora_to_mlp: True
   lora_rank: 64  # higher increases accuracy and memory
@@ -38,7 +38,8 @@ checkpointer:
   _component_: torchtune.training.FullModelHFCheckpointer
   checkpoint_dir: /gpfs/scrubbed/jcols/projects/ft-llms/models/Llama-3.2-3B-Instruct/
   checkpoint_files: [
-    model.safetensors
+    model-00001-of-00002.safetensors,
+    model-00002-of-00002.safetensors,
   ]
   recipe_checkpoint: null
   output_dir: ${output_dir}
@@ -58,7 +59,7 @@ dataset:
   packed: False  # True increases speed
 seed: null
 shuffle: True
-batch_size: 8
+batch_size: 16
 
 # Optimizer and Scheduler
 optimizer:
