--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.11.0",
     "peft>=0.17.1",
+    "rouge-score>=0.1.2",
     "torch>=2.9.0",
     "torchao>=0.14.1",
     "torchtune>=0.6.1",
