--- a/configs/llama3_2_3B_cuda.yaml
+++ b/configs/llama3_2_3B_cuda.yaml
@@ -17,12 +17,12 @@
 # For single device LoRA finetuning please use 3B_lora_single_device.yaml
 # or 3B_qlora_single_device.yaml
 
-output_dir: ${FT_LLMS_ROOTDIR}/checkpoints/llama3_2_3B_lora
+output_dir: ${oc.env:FT_LLMS_ROOT}/checkpoints/llama3_2_3B_lora
 
 # Tokenizer
 tokenizer:
   _component_: torchtune.models.llama3.llama3_tokenizer
-  path: ${FT_LLMS_ROOTDIR}/models/Llama-3.2-3B-Instruct/original/tokenizer.model
+  path: ${oc.env:FT_LLMS_ROOT}/models/Llama-3.2-3B-Instruct/original/tokenizer.model
   max_seq_len: null
 
 # Model Arguments
@@ -36,7 +36,7 @@ model:
 
 checkpointer:
   _component_: torchtune.training.FullModelHFCheckpointer
-  checkpoint_dir: ${FT_LLMS_ROOTDIR}/models/Llama-3.2-3B-Instruct/
+  checkpoint_dir: ${oc.env:FT_LLMS_ROOT}/models/Llama-3.2-3B-Instruct/
   checkpoint_files: [
     model-00001-of-00002.safetensors,
     model-00002-of-00002.safetensors,
@@ -54,8 +54,8 @@ dataset:
   conversation_column: messages
   conversation_style: openai
   data_files:
-    train: ${FT_LLMS_ROOTDIR}/data/plos_train.jsonl
-    validation: ${FT_LLMS_ROOTDIR}/data/plos_validation.jsonl
+    train: ${oc.env:FT_LLMS_ROOT}/data/plos_train.jsonl
+    validation: ${oc.env:FT_LLMS_ROOT}/data/plos_validation.jsonl
   packed: False  # True increases speed
 seed: null
 shuffle: True
